[gd_scene load_steps=23 format=3 uid="uid://b5nmge1uoj7tm"]

[ext_resource type="Texture2D" uid="uid://ddmx7obrc875l" path="res://Resources/AnimationSheet_Character.png" id="1_eyw0p"]
[ext_resource type="Script" path="res://code/player/player.gd" id="1_vlwsc"]
[ext_resource type="Script" path="res://code/player/fsm/player_fsm.gd" id="3_tai1m"]
[ext_resource type="Script" path="res://code/player/fsm/above_state.gd" id="4_pahjt"]
[ext_resource type="Script" path="res://code/player/fsm/below_state.gd" id="5_eufcq"]
[ext_resource type="Script" path="res://code/player/fsm/caught_state.gd" id="6_5j8be"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pwskg"]
atlas = ExtResource("1_eyw0p")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqp8c"]
atlas = ExtResource("1_eyw0p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvqda"]
atlas = ExtResource("1_eyw0p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhgpc"]
atlas = ExtResource("1_eyw0p")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4c8j"]
atlas = ExtResource("1_eyw0p")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_br6u0"]
atlas = ExtResource("1_eyw0p")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx80q"]
atlas = ExtResource("1_eyw0p")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k26ae"]
atlas = ExtResource("1_eyw0p")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7guw"]
atlas = ExtResource("1_eyw0p")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufq7e"]
atlas = ExtResource("1_eyw0p")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_no12p"]
atlas = ExtResource("1_eyw0p")
region = Rect2(224, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qc5ra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwskg")
}],
"loop": true,
"name": &"burrowed",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqp8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvqda")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhgpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4c8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br6u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx80q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k26ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7guw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufq7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no12p")
}],
"loop": true,
"name": &"jumping",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0cvc"]
size = Vector2(16, 28)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4w3vk"]
bg_color = Color(0.72549, 0, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci5a3"]
bg_color = Color(0.121569, 0.690196, 0.631373, 1)

[sub_resource type="Theme" id="Theme_i7bht"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_4w3vk")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ci5a3")

[node name="Player" type="CharacterBody2D"]
position = Vector2(102, 152)
collision_mask = 5
script = ExtResource("1_vlwsc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qc5ra")
animation = &"burrowed"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_h0cvc")
metadata/_edit_group_ = true

[node name="PlayerFSM" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_tai1m")
current_state = NodePath("AboveState")

[node name="AboveState" type="Node" parent="PlayerFSM"]
script = ExtResource("4_pahjt")

[node name="BelowState" type="Node" parent="PlayerFSM"]
script = ExtResource("5_eufcq")

[node name="CaughtState" type="Node" parent="PlayerFSM"]
script = ExtResource("6_5j8be")

[node name="breath_bar" type="ProgressBar" parent="."]
visible = false
offset_left = 18.0
offset_top = -21.0
offset_right = 22.0
offset_bottom = 6.0
theme = SubResource("Theme_i7bht")
value = 100.0
fill_mode = 3
show_percentage = false
